--- a/contact-us.html
+++ b/contact-us.html
@@ -4,120 +4,115 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Class-Pro</title>
-        <!-- Bootstrap 5 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <!-- swiper slider link -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-        <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <!-- 🔹 NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3" aria-label="Main Navigation">
             <div class="container">
-                <a class="navbar-brand fs-3 main-logo" href="index.html">
-                    <img src="assets/image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt="image" loading="lazy">
+                <a class="navbar-brand fs-3 main-logo" href="index.html" aria-label="Classpro Home">
+                    <img src="assets/image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt="Classpro Logo" loading="lazy">
                 </a>
                 <button
                     class="navbar-toggler"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-                        <!-- FEATURES -->
                         <li class="nav-item dropdown mx-2 position-relative">
-                            <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
+                            <a class="nav-link fw-semibold d-flex align-items-center" href="#" id="featuresDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <span class="me-1">Features</span>
                                 <img
                                     src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
                                     width="12"
                                     height="7"
                                     class="mt-1"
-                                    alt="image"
+                                    alt=""
+                                    aria-hidden="true"
                                     loading="lazy"
                                 >
                             </a>
-                            <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
+                            <div class="dropdown-menu mega-dropdown shadow-lg p-4" aria-labelledby="featuresDropdown" style="top: 89%;">
                                 <div class="row g-4">
                                     <div class="col-md-4">
                                         <a href="fee-management.html" class="feature-item">Transparent Fee Management</a>
-                                        <div class="divider"></div>
+                                        <div class="divider" role="presentation"></div>
                                         <a href="study-material.html" class="feature-item">Share Notes / Study Materials</a>
-                                        <div class="divider"></div>
+                                        <div class="divider" role="presentation"></div>
                                         <a href="assignments.html" class="feature-item">Homework & Assignments</a>
                                     </div>
                                     <div class="col-md-4">
                                         <a href="biometric-attendance.html" class="feature-item">Biometric Attendance</a>
-                                        <div class="divider"></div>
+                                        <div class="divider" role="presentation"></div>
                                         <a href="student-performance.html" class="feature-item">Student Performance</a>
-                                        <div class="divider"></div>
+                                        <div class="divider" role="presentation"></div>
                                         <a href="reports.html" class="feature-item">Insightful Reports</a>
                                     </div>
                                     <div class="col-md-4">
                                         <a href="app.html" class="feature-item">Student / Parent App</a>
-                                        <div class="divider"></div>
+                                        <div class="divider" role="presentation"></div>
                                         <a href="communication.html" class="feature-item">Communication & Reminders</a>
                                     </div>
                                 </div>
                             </div>
-                            
                         </li>
-                        <!-- COMPANY -->
                         <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" id="companyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Company
                                 <img
                                     src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
                                     width="12"
                                     height="7"
                                     class="mt-1"
-                                    alt="image"
+                                    alt=""
+                                    aria-hidden="true"
                                     loading="lazy"
                                 >
                             </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3" aria-labelledby="companyDropdown">
                                 <a href="careers.html" class="feature-item">Career</a>
-                                <div class="divider"></div>
+                                <div class="divider" role="presentation"></div>
                                 <a href="team.html" class="feature-item">Team</a>
-                                <div class="divider"></div>
+                                <div class="divider" role="presentation"></div>
                                 <a href="our-story.html" class="feature-item">About</a>
                             </div>
                         </li>
-                        <!-- PRICING -->
                         <li class="nav-item mx-2">
                             <a class="nav-link fw-semibold" href="plans.html">Pricing</a>
                         </li>
-                        <!-- RESOURCES -->
                         <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" id="resourcesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Resources
                                 <img
                                     src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
                                     width="12"
                                     height="7"
                                     class="mt-1"
-                                    alt="image"
+                                    alt=""
+                                    aria-hidden="true"
                                     loading="lazy"
                                 >
                             </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3" aria-labelledby="resourcesDropdown">
                                 <a href="#" class="feature-item">Blogs</a>
-                                <div class="divider"></div>
+                                <div class="divider" role="presentation"></div>
                                 <a href="customers.html" class="feature-item">Customers</a>
                             </div>
                         </li>
-                        <!-- CONTACT -->
                         <li class="nav-item mx-2">
                             <a class="nav-link fw-semibold" href="contact-us.html">Contact Us</a>
                         </li>
-                        <!-- LOGIN -->
                         <li class="nav-item ms-2 ms-lg-3">
-                            <a href="login.html" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
+                            <a href="login.html" class="btn btn-outline-success px-4 fornw-bg rounded-pill" role="button">
                                 Log In
                             </a>
                         </li>
@@ -125,33 +120,29 @@
                 </div>
             </div>
         </nav>
-        <!-- nav bar end -->
-        <!-- main start -->
-        <main>
-            <section class="contact-section container py-5">
+        <main role="main">
+            <section class="contact-section container py-5" aria-labelledby="contact-heading">
                 <div class="row justify-content-between align-items-start">
-                    <!-- LEFT SIDE FORM -->
                     <div class="col-lg-6">
-                        <h2 class="contact-title mb-4">Let’s Talk</h2>
-                        <form>
+                        <h2 class="contact-title mb-4" id="contact-heading">Let’s Talk</h2>
+                        <form aria-label="Contact form">
                             <div class="mb-4">
-                                <input type="text" class="form-control custom-input" placeholder="Name">
+                                <input type="text" class="form-control custom-input" placeholder="Name" aria-label="Full Name">
                             </div>
                             <div class="mb-4">
-                                <input type="email" class="form-control custom-input" placeholder="Email">
+                                <input type="email" class="form-control custom-input" placeholder="Email" aria-label="Email Address">
                             </div>
                             <div class="mb-4">
-                                <input type="text" class="form-control custom-input" placeholder="Mobile Number">
+                                <input type="text" class="form-control custom-input" placeholder="Mobile Number" aria-label="Mobile Number">
                             </div>
                             <div class="mb-4">
-                                <textarea class="form-control custom-input" placeholder="Message"></textarea>
+                                <textarea class="form-control custom-input" placeholder="Message" aria-label="Your Message"></textarea>
                             </div>
                             <div class="trycent">
-                                <button class="submit-btn">Submit</button>
+                                <button class="submit-btn" type="submit">Submit</button>
                             </div>
                         </form>
                     </div>
-                    <!-- RIGHT SIDE INFO -->
                     <div class="col-lg-5 mt-5 mt-lg-0">
                         <p class="info-heading">
                             For any queries, doubts, or questions,
@@ -159,7 +150,7 @@
                             feel free to reach us at
                         </p>
                         <div class="info-item d-flex mt-2">
-                            <i class="bi bi-geo-alt-fill info-icon"></i>
+                            <i class="bi bi-geo-alt-fill info-icon" aria-hidden="true"></i>
                             <p class="ms-3 info-text">
                                 Address: Classpro, A5, Ganna Bhavan,
                                 <br>
@@ -169,20 +160,18 @@
                             </p>
                         </div>
                         <div class="info-item d-flex mt-2 ps-1">
-                            <i class="bi bi-telephone info-icon"></i>
+                            <i class="bi bi-telephone info-icon" aria-hidden="true"></i>
                             <p class="ms-3 info-text">Phone no. +91-7666662930</p>
                         </div>
                         <div class="info-item d-flex mt-2 ps-1">
-                            <i class="bi bi-envelope info-icon"></i>
+                            <i class="bi bi-envelope info-icon" aria-hidden="true"></i>
                             <p class="ms-3 info-text">Email: support@classpro.in</p>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- main end -->
-        </main>
-        <!-- footer -->
-        <section class="india-hero pt-5">
+            </main>
+        <section class="india-hero pt-5" aria-label="Call to Action">
             <div class="container py-lg-5 py-sm-3">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -193,23 +182,20 @@
                         </h1>
                     </div>
                     <div class="col-lg-6 text-lg-end new-try">
-                        <a href="#" class="btn demo-btn px-4 py-3">Get Your Free Demo</a>
+                        <a href="#" class="btn demo-btn px-4 py-3" role="button">Get Your Free Demo</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- FOOTER SECTION -->
-        <footer class="footer-section text-white py-5">
+        <footer class="footer-section text-white py-5" role="contentinfo">
             <div class="container">
                 <div class="row gy-4">
-                    <!-- CONTACT -->
                     <div class="col-6 col-md-3 ">
                         <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">CONTACT</h6>
                         <p>+91-76666 62330</p>
                         <p>Support Helpdesk</p>
                         <p>Contact Us</p>
                     </div>
-                    <!-- ABOUT US -->
                     <div class="col-6 col-md-3">
                         <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ABOUT US</h6>
                         <p>Blog</p>
@@ -219,11 +205,10 @@
                         <p>Privacy</p>
                         <p>Terms of Service</p>
                         <p>How to Pay</p>
-                        <button class="btn btn-sm button-footer mt-2 py-2 px-4">
+                        <button class="btn btn-sm button-footer mt-2 py-2 px-4" aria-label="Make Payment">
                             Make Payment
                         </button>
                     </div>
-                    <!-- PRODUCT -->
                     <div class="col-6 col-md-3">
                         <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">PRODUCT</h6>
                         <p>Tour</p>
@@ -234,21 +219,20 @@
                         <p>Examjoy</p>
                         <p>Download TeamViewer</p>
                     </div>
-                    <!-- ADMIN APP + RESOURCES -->
                     <div class="col-6 col-md-3">
                         <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ADMIN APP</h6>
                         <img
                             src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
                             class="img-fluid mb-2"
                             width="130"
-                            alt="image"
+                            alt="Get it on Google Play"
                             loading="lazy"
                         ><br>
                         <img
                             src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
                             class="img-fluid mb-4"
                             width="130"
-                            alt="image"
+                            alt="Download on the App Store"
                             loading="lazy"
                         > 
                         <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">RESOURCES</h6>
@@ -259,7 +243,6 @@
             </div>
         </footer>
     </section>
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
